Attempt fix github pages

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@
 #
 
 # Name and Description of Site
+title: Brandon Coffey - Portfolio
 name: Brandon Coffey
 description: Programmer and Technical Artist
 
