--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@
 title: Brandon Coffey - Portfolio
 name: Brandon Coffey
 description: Programmer and Technical Artist
+url: https://coffeygames.com
 
 # Includes an icon in the footer for each username you enter
 footer-links:
@@ -25,26 +26,25 @@ collections:
     output: true
     sort_by: priority
 
+# Plugins
+plugins:
+  - jekyll-redirect-from
+  - jekyll-seo-tag
+
 # Enter your Google Analytics web tracking code to activate tracking
 google_analytics:
 
-# Your website URL
-url: https://coffeygames.com
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
-
-#
-# !! You don't need to change any of the configuration flags below !!
-#
+compress_html:
+  clippings: all
+  comments: ["<!-- ", " -->"]
+  endings: all
+  ignore:
+    envs: [development]
+  blanklines: false
+  profile: false
+  startings: [html, head, body]
 
 permalink: /:title/
-
-# The release of Jekyll Now that you're using
-version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
@@ -59,11 +59,6 @@ kramdown:
 # Set the Sass partials directory, as we're using @imports
 sass:
   style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
 # Exclude these files from your production _site
 exclude:
