--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 #
 
 # Name and Description of Site
-title: Brandon Coffey - Portfolio
+title: Portfolio - Brandon Coffey
+description: Portfolio - Brandon Coffey, Programmer and Technical Artist
 name: Brandon Coffey
-description: Programmer and Technical Artist
 url: https://coffeygames.com
 
 # Includes an icon in the footer for each username you enter
