Website Structure Cleanup

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name and Description of Site
 title: Portfolio - Brandon Coffey
 description: Portfolio - Brandon Coffey, Programmer and Technical Artist
-name: Brandon Coffey
+author: Brandon Coffey
 url: https://coffeygames.com
 
 # Includes an icon in the footer for each username you enter
