Update Domain Name

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Portfolio - Brandon Coffey
 description: Portfolio - Brandon Coffey, Programmer and Technical Artist
 author: Brandon Coffey
-url: https://coffeygames.com
+url: https://brandoncoffey.com
 
 # Includes an icon in the footer for each username you enter
 footer-links:
