--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: https://brandoncoffey.com
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  email: bmc939@gmail.com
+  email: business@brandoncoffey.com
   linkedin: brandon-coffey-36a802191
   artstation: brandon-coffey
   github: BrandonMCoffey
