--- a/_config.yml
+++ b/_config.yml
@@ -20,18 +20,13 @@ footer-links:
   twitter:
   youtube:
 
-# Collections (Custom Pages)
 collections:
   projects:
     output: true
 
-# Plugins
 plugins:
   - jekyll-redirect-from
   - jekyll-seo-tag
-
-# Enter your Google Analytics web tracking code to activate tracking
-google_analytics:
 
 compress_html:
   clippings: all
@@ -45,21 +40,21 @@ compress_html:
 
 permalink: /:title/
 
-# Jekyll 3 now only supports Kramdown for Markdown
+# Kramdown for Markdown
 kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
+  # GitHub flavored markdown
   input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+  # rouge for syntax highlighting
   syntax_highlighter: rouge
   syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
+    # pygments syntax highlighting css
     css_class: 'highlight'
 
-# Set the Sass partials directory, as we're using @imports
+# Set the Sass partials directory
 sass:
-  style: :expanded # You might prefer to minify using :compressed
+  style: :expanded # Or minify using :compressed
 
-# Exclude these files from your production _site
+# Excluded files from production site
 exclude:
   - Gemfile
   - Gemfile.lock
